# mcp-domotica-backend

./: .gitignore  README.md  main.py  models.py  pyproject.toml  storage.py
servers/: mcp_devices.py  mcp_rooms.py
